--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ footer {
 <body>
 
 <header>
-  <h2>الجملة الفضة والمجوهرات-- سعر المصنع المصنوعة في الصين silver jewelry-- factory price-made in China/卸売銀製の宝石類 - 工場で中国製/도매 실버 주얼리 - 공장 가격은 중국에서 만든</h2>
+  <h2>أزياء المسلم</h2>
 </header>
 
 <section>
