--- a/index.html
+++ b/index.html
@@ -71,18 +71,19 @@ footer {
 <section>
   <nav>
       
-      <h1><font color="deeppink">連絡先メールアドレス/contact email: ruiojack520@gmail.com.</h1>
+      <h1><font color="deeppink">خدمة البريد email: ruiojack520@gmail.com.</h1>
         <h1><a href="https://cheapeasylife.ga/index.php/product/pure-silver-ring-price70usd-door-to-door-service-in-15-day-2/">페이팔 지불ペイパル支払いPayPal платежPaypal payment</a></font></h1>
     <ul>
       <li><a href="https://cheapeasylife.ga/index.php/introduction-to-gem-types-and-general-knowledge/"><h3>Введение в типы драгоценных камней и общие знания보석 유형 및 일반적인 지식 소개宝石の種類と一般的な知識の紹介Introduction to gem types and general knowledge</h3></a></li>
-      <li><a href="https://cheapeasylife.ga/index.php/characteristics-and-uses-of-silver/"><h3>Характеристика и использование серебраCaracterísticas y usos de la plata.ลักษณะและการใช้เงิน/Charakteristika a použití stříbraخصائص واستخدامات الفضة銀の特徴と用途/은의 특성과 용도Characteristics and uses of silver</h3></a></li>
 
     </ul>
   </nav>
   
   <article>
     <h1><font color="red">النساء مثل الزهور ، الزهور مثل الأحلام women are like flowers, flowers are like dreams./여성은 꽃과 같고 꽃은 꿈과 같습니다./女性は花のようで、花は夢のようです。</font></h1>
-  </article>
+       <li><a href="https://cheapeasylife.ga/index.php/characteristics-and-uses-of-silver/"><h3>Характеристика и использование серебраCaracterísticas y usos de la plata.ลักษณะและการใช้เงิน/Charakteristika a použití stříbraخصائص واستخدامات الفضة銀の特徴と用途/은의 특성과 용도Characteristics and uses of silver</h3></a></li>
+
+    </article>
 </section>
 
 
@@ -125,7 +126,7 @@ footer {
     <table>
       
         <tr>
-                <td><img src="1.jpg"/600x600" width="700" hight="350" border="6" alt="" ><h4><font color="white">70usd--door to door service in 15 days</font></h4></td>
+                <td><img src="1.jpg"/600x600" width="700" hight="350" border="6" alt="" ><h4><font color="white">يمكن التفاوض على الأسعارusd70--door to door service in 15 days</font></h4></td>
                 <td><img src="2.jpg"/600x600" width="700" hight="350" border="6" alt="" ><h4><font color="white">70usd--door to door service in 15 day</font></h4></td>
                 <td><img src="3.jpg"/600x600" width="700" hight="350" border="6" alt=""><h4><font color="white">70usd--door to door service in 15 day</font></h4></td>
               </tr>
