--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@ footer {
       
         <tr>
                 <td><img src="1.jpg"/600x600" width="700" hight="350" border="6" alt="" ><h4><font color="white">يمكن التفاوض على الأسعارusd70--door to door service in 15 days</font></h4></td>
-                <td><img src="2.jpg"/600x600" width="700" hight="350" border="6" alt="" ><h4><font color="white">70usd--door to door service in 15 day</font></h4></td>
-                <td><img src="3.jpg"/600x600" width="700" hight="350" border="6" alt=""><h4><font color="white">70usd--door to door service in 15 day</font></h4></td>
+                <td><img src="2.jpg"/600x600" width="700" hight="350" border="6" alt="" ><h4><font color="white">يمكن التفاوض على الأسعارusd70--door to door service in 15 day</font></h4></td>
+                <td><img src="3.jpg"/600x600" width="700" hight="350" border="6" alt=""><h4><font color="white">70usdيمكن التفاوض على الأسعار--door to door service in 15 day</font></h4></td>
               </tr>
               <tr>
                 <td><img src="4.jpg"/600x600" width="700" hight="350" border="6" alt="" ><h4><font color="white">70usd--door to door service in 15 day</font></h4></td>
